# projex

./: .env.minio.example  .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  RELEASE.md  docker-compose.minio.yml  index.html  package-lock.json  package.json  vite.config.ts
docs/: ANDROID_DEV_SETUP.md  ANDROID_SUPPORT.md  LOGS_VIEWER.md  MILESTONES.md  PRD.md  SYNC_ENV_PROFILES.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_add_person_email_role.sql  0003_add_sync_support.sql  0004_add_project_comments.sql  0005_add_auto_sync_interval.sql  0006_add_project_product_name.sql
src-tauri/src/: android_jni.rs  error.rs  lib.rs
src-tauri/src/app/: assignment.rs  comment.rs  data_transfer.rs  export.rs  mod.rs  partner.rs  person.rs  project.rs
src-tauri/src/commands/: assignment.rs  comment.rs  data_transfer.rs  export.rs  logs.rs  mod.rs  partner.rs  person.rs  project.rs  sync.rs
src-tauri/src/domain/: mod.rs  status.rs
src-tauri/src/infra/: db.rs  mod.rs
src-tauri/src/sync/: delta_sync.rs  mod.rs  s3_client.rs  snapshot.rs  vector_clock.rs
src-tauri/tests/: test_assignment.rs  test_comment.rs  test_delta.rs  test_error_sync_wipe_details.rs  test_export.rs  test_partner.rs  test_person.rs  test_person_csv.rs  test_project.rs  test_s3_minio.rs  test_snapshot.rs  test_status_machine.rs  test_sync_conflict.rs  test_sync_e2e_minio.rs  test_sync_engine.rs  test_sync_triggers.rs  test_vector_clock.rs  test_wipe_business_data.rs  test_wipe_gate.rs
(+55 files in other folders)
