[package]
name = "projex"
version = "1.0.4"
description = "Projex - Personal Project Management Tool"
authors = ["nickdu"]
license = "MIT"
repository = "https://github.com/nickdu2009/projex"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
# S3 同步依赖
aws-sdk-s3 = "1.60"
aws-config = "1.5"
aws-credential-types = "1.2"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
flate2 = "1.0"
fs2 = "0.4.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
